<resources>
    <string name="app_name">SMS Insert</string>
    <string name="setting_default_sms_app">Modify System Default SMS App</string>
    <string name="import_inner_data">Import Default SMS DataSet</string>
    <string name="import_from_outer">Import From SD Card</string>
    <string name="app_had_set_been_default">The Tool has been set to default SMS successfully.</string>
    <string name="app_already_default">Set as default SMS already.</string>
    <string name="sms_file_select_title">SMS Batch File Selector</string>
    <string name="inport_single_sms">Import Single SMS</string>
    <string name="sms_body">SMS body</string>
    <string name="sms_from">SMS FROM</string>
    <string name="backup_system_sms">Backup System SMS</string>
    <string name="backup_sms">Backup SMS</string>
    <string name="backup_start_now">Start Now</string>
    <string name="save_path_tip">Backup file have been saved in :%s</string>
</resources>
