<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize">

            <RelativeLayout
                android:paddingEnd="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/back" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/back"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/inport_single_sms"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/save"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/save" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sms_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/sms_from"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/sms_body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/input_sms_bg"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/sms_body"
                android:inputType="textPersonName"
                android:minHeight="300dp"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="@+id/sms_from"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/sms_from"
                app:layout_constraintTop_toBottomOf="@+id/sms_from" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

</ScrollView>
